frontend/crebTest/style.css
* {
  margin: 0;
  padding: 0;
}

.main-header {
  padding-bottom: 85px;
  margin-left: 100px;
  /* padding-left: 20px;
  padding-right: 40px;
  padding: 20px 40 px; */
}

.mid-header {
  background-color: #f7f7f7;
  padding: 70px;
}

.mid-image {
  width: 500px;
  height: auto;
  /* text-align: right; */
}

aside {
  background-color: #f7f7f7;
  border-top: 5px solid #f7f7f7;
}

body {
  background-color: white;
}

.container {
  /* width: 700px; */
  /* margin-left: auto;
  margin-right: auto; */
  margin: 0 auto;
}

article {
  padding-top: 200px;
  padding-bottom: 200px;
}

h1,
h2,
h3,
h4,
p,
li {
  font-family: sans-serif;
  width: 300px;
  line-height: 1.5;
}

h1 {
  color: rgb(39, 39, 40);
  font-size: 26px;
  text-transform: none;
  font-style: normal;
}

h2 {
  color: rgb(67, 67, 67);
  font-size: 26px;
  text-transform: none;
  font-style: normal;
}

h3 {
  color: rgb(67, 67, 67);
  font-size: 26px;
  text-transform: none;
  font-style: normal;
}

h4 {
  color: rgb(39, 39, 40);
  font-size: 20px;
  text-transform: none;
  font-style: normal;
}

p {
  color: rgb(67, 67, 67);
  font-size: 18px;
  line-height: 1.5;
  font-weight: lighter;
}

.h1-midtag {
  font-size: 40px;
  width: 500px;
}

.p1-tag {
  margin-top: 30px;
  font-size: 25px;
  width: 500px;
  /* text-align: left; */
}

li {
  color: rgb(67, 67, 67);
  font-size: 20px;
  font-weight: lighter;
}

article li {
  margin-bottom: 20px;
}

/* footer p {
  font-size: 16px;
} */

footer {
  margin-top: 200px;
  margin-left: 20px;
  margin-bottom: 40px;
}

#copyright {
  font-size: 16px;
}

.related-description {
  font-size: 18px;
  font-weight: lighter;
}

ul {
  margin-left: 100px;
  list-style: none;
}

.ul-1 {
  margin-bottom: 20px;
}

.ul-2 {
  margin-bottom: 20px;
}

.ul-3 {
  margin-bottom: 20px;
}

.related-bullets {
  list-style: none;
}

.h1-midpage {
  margin-left: 100px;
}

/* article header {
  background-color: #f7f7f7;
  /* background-color: #f76d6d; */

/* nav {
  margin-right: 50px;
} */

a:link {
  color: rgb(27, 28, 28);
  text-decoration: none;
  font-weight: lighter;
  font-family: sans-serif;
}

a:visited {
  color: rgb(27, 28, 28);
}

a:hover {
  text-decoration: underline;
}

a:active {
  background-color: white;
}

nav a:link:first-child {
  margin-left: 0;
}

nav a:link {
  /* background-color: red; */
  margin: 20px;
  /* display: block; */
  display: inline-block;
}

/* button {
  font-size: 22px;
  position: relative;
  bottom: 50px;
  right: 50px;
  /* top: 0;
  bottom: 0; */

